Início da construção do modal de criação de novas tasks + adição de cores faltantes ao CSS

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   --color-edit-light: #B8BACF;
   --color-delete-light: #999AC6;
   --color-add-light: #00DD9E;
+  --color-newTask-bar-light: #B3B7BF;
+  --color-newTask-bar-dark: #524E44;
 
   --color-back-dark: #2A2B2A;
   --color-task-dark: #706C61;
