--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --color-delete-light: #999AC6;
   --color-add-light: #00DD9E;
   --color-newTask-bar-light: #B3B7BF;
-  --color-newTask-bar-dark: #524E44;
+  --color-label-bg-light: #E4E8F1;
 
   --color-back-dark: #2A2B2A;
   --color-task-dark: #706C61;
@@ -18,6 +18,8 @@
   --color-edit-dark: #1F2041;
   --color-delete-dark: #4B3F72;
   --color-add-dark: #417B5A;
+  --color-newTask-bar-dark: #524E44;
+  --color-label-bg-dark: #928C7C;
 
   --color-overdue: #FC0000;
   --color-ontime: #12029F;
